whitespace and alignment fixes for .music_div

--- a/src/stylesheets/application.sass
+++ b/src/stylesheets/application.sass
@@ -101,13 +101,13 @@ body
 .player_div
   width: 100px
   height: 20px
-  margin-left: 10px
 
 .music_div
   margin-left: 0px
   border: #666666 1px solid
-  width: 300px
-  text-align: center
+  width: 240px
+  white-space: nowrap
+  padding: 0.5em 1em
   background: rgba(102,51,51,0.7)
   border-top-right-radius: 10px
   -webkit-border-top-right-radius: 10px
